# galileo_ha

./: .gitignore  LICENSE  README.md
energymanager/: energymanager.c  galileo_gpio.h  message.c  message.h  serial.c
gasdetector/: galileo_gpio.c  gasdetector.c
ip_cam_capture/: Makefile.am  capture_from_network.c
ip_cam_recorder/: Makefile.am  save_video.c
securehome/: device.c  device.h  message.c  message.h  serial.c  smart_home.c
serialcomm/: main.c  serial.c
smart_home/: AUTHORS  Makefile  Makefile.am  aclocal.m4  compile  config.guess  config.h  config.sub  configure  configure.ac  depcomp  install-sh  ltmain.sh  missing
smart_home/src/: Makefile  camera.h  device.h  devices.xml  gasdetector.c  message.c  message_queue.h  serial.c
smarthome/: Makefile.am  camera.c  device.c  galileo_gpio.c  gasdetector.h  message.h  message_queue.c  smart_home.c  socket_listener.h
smarthome-0.0.1/: -libtoolT  INSTALL  README  config.status
smarthome-0.0.1-yocto-recipe/: README  opencv_2.4.9.bbappend  smarthome_0.0.1.bb
smarthome-0.0.1/scripts/: startha.sh
smarthome-0.0.1/src/: commands.xml  device.c  device.h  serial.h  smart_home.c  socket_listener.c  thermometer.c  thermometer.h
smarthome_app/: AndroidManifest.xml
smarthome_app/res/drawable-hdpi/: circle.xml  image_view_round.xml  update_button.xml
smarthome_app/res/layout/: activity_smart_home.xml  row_layout.xml
thermometer/: thermometer.c
usb_cam_capture/: Makefile.am  capture_from_usb.c
webinterface/: README  commands.json  commands.xml  fileserver.js  home.json  home.xml  homeserver.js
(+5 files in other folders)
